--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
          android:icon="@drawable/ic_launcher"
          android:label="@string/app_name"
          android:supportsRtl="true"
-         android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
+         android:theme="@style/Theme.KomicaReader"
          android:usesCleartextTraffic="true"
          tools:targetApi="31">
         <activity
