--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
          android:label="@string/app_name"
          android:supportsRtl="true"
          android:theme="@style/Theme.KomicaReader"
-         android:usesCleartextTraffic="true"
+         android:networkSecurityConfig="@xml/network_security_config"
          tools:targetApi="31">
         <activity
             android:name=".MainActivity"
