Fix: Search encoding for Gaia boards, implement unit tests, and optimize loading logic

--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,5 @@
-buildscript {
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:8.13.2'
-    }
-}
-
-allprojects {
+plugins {
+    alias(libs.plugins.android.application) apply false
 }
 
 task clean(type: Delete) {
