--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         applicationId "com.komica.reader"
         minSdk 24
         targetSdk 34
-        versionCode 8
+        versionCode 1260105
         versionName "1.26.0105"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
