--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,10 @@
         <activity
             android:name=".SettingsActivity"
             android:exported="false" />
+
+        <activity
+            android:name=".HistoryActivity"
+            android:exported="false" />
             
         <provider
             android:name="androidx.core.content.FileProvider"
