--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,10 @@
         <activity
             android:name=".HistoryActivity"
             android:exported="false" />
+
+        <activity
+            android:name=".GalleryActivity"
+            android:exported="false" />
             
         <provider
             android:name="androidx.core.content.FileProvider"
