--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Dec 29 13:52:12 CST 2025
-sdk.dir=C\:\\Users\\06769\\AppData\\Local\\Android\\Sdk
+#Thu Jan 08 11:32:45 CST 2026
+sdk.dir=C\:\\Users\\echoli\\AppData\\Local\\Android\\Sdk
